# budget-planning-for-moneymoney

./: .gitignore  Makefile  README.md  enchanted-squishing-hamster.md  package-lock.json  package.json  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  llm.rs  main.rs  moneymoney.rs  persistence.rs
src/lib/: types.ts
src/lib/charts/: echarts-setup.ts
src/lib/components/: AccountSelector.svelte  BudgetView.svelte  CategoryRow.svelte  ChatPanel.svelte  EntityManager.svelte  GroupRow.svelte  LineItemRow.svelte  MonthSelector.svelte  NotesPanel.svelte  OverviewBar.svelte  ScenarioAddDialog.svelte  ScenarioBar.svelte  ScenarioPanel.svelte  Toolbar.svelte  TransactionDrawer.svelte  VirtualItemRow.svelte
src/lib/components/analysis/: AlertsPanel.svelte  AnalysisView.svelte  BarChartPanel.svelte  ChartContainer.svelte  ChartFilterBar.svelte  KpiCards.svelte  PieChartPanel.svelte
src/lib/demo/: demoAccounts.ts  demoBudget.ts  demoCategories.ts  demoMode.ts  demoTransactions.ts  index.ts
src/lib/stores/: budget.svelte.ts  llm.svelte.ts  moneymoney.svelte.ts  ui.svelte.ts
src/lib/utils/: budgetCalc.ts  categoryTree.ts  chartData.ts  llmContext.ts
src/routes/: +layout.svelte  +page.svelte
